@@ -26,19 +26,20 @@ module RailsWizard
     ### collections of preferences that are known to work together
     
     # ignore these preferences (because they don't cause conflicts)
-    # :git
-    # :dev_webserver
-    # :prod_webserver
-    # :templates
-    # :quiet_assets
-    # :better_errors
     # :ban_spiders
-    # :jsruntime
-    # :rvmrc
+    # :better_errors
+    # :dev_webserver
+    # :git
     # :github
-    # :prelaunch_branch
+    # :jsruntime
+    # :local_env_file
     # :main_branch
-    
+    # :prelaunch_branch
+    # :prod_webserver
+    # :quiet_assets
+    # :rvmrc
+    # :templates
+
     @@prefs = []
     @@prefs << {:railsapps=>"rails-stripe-membership-saas", :database=>"sqlite", :unit_test=>"rspec", :integration=>"cucumber", :fixtures=>"factory_girl", :frontend=>"bootstrap", :bootstrap=>"sass", :email=>"gmail", :authentication=>"devise", :devise_modules=>"default", :authorization=>"cancan", :starter_app=>"admin_app", :form_builder=>"simple_form"}    
     @@prefs << {:railsapps=>"rails-stripe-membership-saas", :database=>"sqlite", :unit_test=>"rspec", :integration=>"cucumber", :fixtures=>"factory_girl", :frontend=>"bootstrap", :bootstrap=>"sass", :email=>"mandrill", :authentication=>"devise", :devise_modules=>"confirmable", :authorization=>"cancan", :starter_app=>"admin_app", :form_builder=>"simple_form"}    
