@@ -3,75 +3,93 @@
 
 after_everything do
   say_wizard "recipe running after everything"
-  ### PREPARE SEED ###
-  if prefer :authentication, 'devise'
-    if (prefer :authorization, 'cancan') && !(prefer :railsapps, 'rails-prelaunch-signup')
-      unless prefer :orm, 'mongoid'
-        append_file 'db/seeds.rb' do <<-FILE
-puts 'CREATING ROLES'
-Role.create([
-  { :name => 'admin' }, 
-  { :name => 'user' }, 
-  { :name => 'VIP' }
-], :without_protection => true)
+  ### CONFIGURATION FILE ###
+  ## EMAIL
+  case prefs[:email]
+    when 'none'
+      credentials = ''
+    when 'smtp'
+      credentials = ''
+    when 'gmail'
+      credentials = "GMAIL_USERNAME: Your_Username\nGMAIL_PASSWORD: Your_Password\n"
+    when 'sendgrid'
+      credentials = "SENDGRID_USERNAME: Your_Username\nSENDGRID_PASSWORD: Your_Password\n"
+    when 'mandrill'
+      credentials = "MANDRILL_USERNAME: Your_Username\nMANDRILL_API_KEY: Your_API_Key\n"
+  end
+  append_file 'config/application.yml', credentials
+  ## DEFAULT USER
+  append_file 'config/application.yml' do <<-FILE
+ADMIN_NAME: First User
+ADMIN_EMAIL: user@example.com
+ADMIN_PASSWORD: please
 FILE
-        end
-      else
-        append_file 'db/seeds.rb' do <<-FILE
-puts 'CREATING ROLES'
-Role.mongo_session['roles'].insert([
-  { :name => 'admin' }, 
-  { :name => 'user' }, 
-  { :name => 'VIP' }
-])
+  end
+  ## AUTHENTICATION
+  if prefer :authentication, 'omniauth'
+    append_file 'config/application.yml' do <<-FILE
+OMNIAUTH_PROVIDER_KEY: Your_OmniAuth_Provider_Key
+OMNIAUTH_PROVIDER_SECRET: Your_OmniAuth_Provider_Secret
 FILE
-        end
-      end
-    end    
-    if (prefer :devise_modules, 'confirmable') || (prefer :devise_modules, 'invitable')
-      ## DEVISE-CONFIRMABLE
+    end
+  end
+  ## AUTHORIZATION
+  if (prefer :authorization, 'cancan')
+    append_file 'config/application.yml', "ROLES: [admin, user, VIP]\n"
+  end
+  ### SUBDOMAINS ###
+  copy_from_repo 'config/application.yml', :repo => 'https://raw.github.com/RailsApps/rails3-subdomains/master/' if prefer :starter_app, 'subdomains_app'
+  ### APPLICATION.EXAMPLE.YML ###
+  copy_file destination_root + '/config/application.yml', destination_root + '/config/application.example.yml'
+  ### DATABASE SEED ###
+  append_file 'db/seeds.rb' do <<-FILE
+# Environment variables (ENV['...']) are set in the file config/application.yml.
+# See http://railsapps.github.com/rails-environment-variables.html
+FILE
+  end
+  if (prefer :authorization, 'cancan')
+    unless prefer :orm, 'mongoid'
       append_file 'db/seeds.rb' do <<-FILE
-puts 'SETTING UP DEFAULT USER LOGIN'
-user = User.create! :name => 'First User', :email => 'user@example.com', :password => 'please', :password_confirmation => 'please'
-user.confirm!
-puts 'New user created: ' << user.name
-user2 = User.create! :name => 'Second User', :email => 'user2@example.com', :password => 'please', :password_confirmation => 'please'
-user2.confirm!
-puts 'New user created: ' << user2.name
+puts 'ROLES'
+YAML.load(ENV['ROLES']).each do |role|
+  Role.find_or_create_by_name({ :name => role }, :without_protection => true)
+  puts 'role: ' << role
+end
 FILE
       end
     else
-      ## DEVISE-DEFAULT
       append_file 'db/seeds.rb' do <<-FILE
-puts 'SETTING UP DEFAULT USER LOGIN'
-user = User.create! :name => 'First User', :email => 'user@example.com', :password => 'please', :password_confirmation => 'please'
-puts 'New user created: ' << user.name
-user2 = User.create! :name => 'Second User', :email => 'user2@example.com', :password => 'please', :password_confirmation => 'please'
-puts 'New user created: ' << user2.name
+puts 'ROLES'
+YAML.load(ENV['ROLES']).each do |role|
+  Role.mongo_session['roles'].insert({ :name => role })
+  puts 'role: ' << role
+end
 FILE
       end
     end
-    if prefer :starter_app, 'subdomains_app'
-      gsub_file 'db/seeds.rb', /First User/, 'user1'
-      gsub_file 'db/seeds.rb', /Second User/, 'user2'
-    end
-    if prefer :authorization, 'cancan'
-      append_file 'db/seeds.rb' do <<-FILE
-user.add_role :admin
-user2.add_role :VIP
-FILE
-      end
-    end
-    if prefer :railsapps, 'rails-prelaunch-signup'
-      gsub_file 'db/seeds.rb', /user2.add_role :VIP/, ''
-    end
-    ## DEVISE-INVITABLE
-    if prefer :devise_modules, 'invitable'
-      run 'bundle exec rake db:migrate'
-      generate 'devise_invitable user'
-    end    
   end
-  ### APPLY SEED ###
+  ## DEVISE-DEFAULT
+  unless prefer :authentication, 'omniauth'
+    append_file 'db/seeds.rb' do <<-FILE
+puts 'DEFAULT USERS'
+user = User.find_or_create_by_name :name => ENV['ADMIN_NAME'].dup, :email => ENV['ADMIN_EMAIL'].dup, :password => ENV['ADMIN_PASSWORD'].dup, :password_confirmation => ENV['ADMIN_PASSWORD'].dup
+puts 'user: ' << user.name
+FILE
+    end
+  end
+  ## DEVISE-CONFIRMABLE
+  if (prefer :devise_modules, 'confirmable') || (prefer :devise_modules, 'invitable')
+    append_file 'db/seeds.rb', 'user.confirm!'
+  end
+  if (prefer :authorization, 'cancan') && !(prefer :authentication, 'omniauth')
+    append_file 'db/seeds.rb', 'user.add_role :admin'
+  end
+  ## DEVISE-INVITABLE
+  if prefer :devise_modules, 'invitable'
+    run 'bundle exec rake db:migrate'
+    generate 'devise_invitable user'
+  end
+  ### APPLY DATABASE SEED ###
   unless prefer :orm, 'mongoid'
     ## ACTIVE_RECORD
     say_wizard "applying migrations and seeding the database"
