@@ -81,18 +81,19 @@ end
 
 # remove prefs which are diagnostically irrelevant
 redacted_prefs = prefs.clone
-redacted_prefs.delete(:git)
-redacted_prefs.delete(:dev_webserver)
-redacted_prefs.delete(:prod_webserver)
-redacted_prefs.delete(:templates)
-redacted_prefs.delete(:quiet_assets)
-redacted_prefs.delete(:better_errors)
 redacted_prefs.delete(:ban_spiders)
-redacted_prefs.delete(:jsruntime)
-redacted_prefs.delete(:rvmrc)
+redacted_prefs.delete(:better_errors)
+redacted_prefs.delete(:dev_webserver)
+redacted_prefs.delete(:git)
 redacted_prefs.delete(:github)
-redacted_prefs.delete(:prelaunch_branch)
+redacted_prefs.delete(:jsruntime)
+redacted_prefs.delete(:local_env_file)
 redacted_prefs.delete(:main_branch)
+redacted_prefs.delete(:prelaunch_branch)
+redacted_prefs.delete(:prod_webserver)
+redacted_prefs.delete(:quiet_assets)
+redacted_prefs.delete(:rvmrc)
+redacted_prefs.delete(:templates)
 
 if diagnostics_prefs.include? redacted_prefs
   diagnostics[:prefs] = 'success'
