@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.2.23"
+  VERSION = "2.2.24"
 end
