@@ -1,8 +1,9 @@
 h1. CHANGELOG
 
+h2. 2.2.24 December 16, 2012
 
-h2. 2.2.4 unreleased
-
+* use 'find_or_create_by_name' in the 'db/seeds.rb' file to avoid duplicate entries
+* refactor to set default user and roles from 'application.yml' file
 * add gem 'libv8' to accommodate gem 'therubyracer'
 
 h2. 2.2.23 December 14, 2012
